# github-bootstrapper

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  config.py  environment.yml  main.py  pyproject.toml  requirements.txt
gitfleet/: __main__.py  config.py
gitfleet/actions/: __init__.py  base.py  claude_sdk.py  description_sync.py  git.py  json_ops.py  subprocess_ops.py
gitfleet/core/: __init__.py  github_client.py  logger.py  registry.py  repo_manager.py  types.py
gitfleet/mcp/: __init__.py  logging_utils.py  server.py  tools.py
gitfleet/operations/: base.py  claude_exec.py  clone_only.py  pull_only.py  settings_clean.py
gitfleet/pipelines/: __init__.py  adapter.py  base.py  executor.py  git_ops.py  registry.py  settings_ops.py  skill_ops.py  status_ops.py  subprocess_ops.py
gitfleet/predicates/: __init__.py  base.py  core.py
gitfleet/prompt_templates/: __init__.py  license.py  raw.py
gitfleet/utils/: __init__.py  async_bridge.py  git.py  progress.py
github_bootstrapper/: __main__.py  config.py
github_bootstrapper/core/: github_client.py  logger.py  repo_manager.py
github_bootstrapper/operations/: base.py  claude_exec.py  clone_only.py  description_sync.py  pull_only.py  readme_gen.py  registry.py  sandbox_enable.py  settings_clean.py  status.py  sync.py
github_bootstrapper/prompt_templates/: __init__.py  base.py  init.py  readme.py  registry.py
github_bootstrapper/utils/: filters.py  git.py  progress.py
